# rb-tree-visualizer

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  bun.lockb  package.json  start.sh  tailwind.config.js  tailwind.config.ts
assets/: main.css  tailwind.css
src/: layout.rs  main.rs  routes.rs  store.rs
src/algorithm/: node.rs  tree.rs
src/components/: canvas.rs  canvas_control.rs  controls.rs  input.rs  mod.rs  navbar.rs
src/components/ui/: button.rs  input.rs
src/pages/: about.rs  home.rs  not_found.rs
