[package]
name = "temp2"
version = "0.1.0"
authors = ["Yuvrajsinh Gohil <yuvrajsinh476@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web", "router"] }
dioxus-logger = "0.5.1"
web-sys = "0.3"
